update-commit